# tokf

./: .release-please-config.json  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  justfile
.cargo-husky/hooks/: pre-commit
.claude/skills/tokf-filter/: SKILL.md
.github/: renovate.json
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/: gaps.md
filters/: git-diff.toml  pytest.toml  tsc.toml
filters/cargo/: check.toml  install.toml
filters/docker/: images.toml  ps.toml
filters/gh/: issue.toml  pr.toml
filters/git/: show.toml
filters/go/: build.toml  vet.toml
filters/kubectl/: get.toml
filters/next/: build.toml
filters/npm/: run.toml
filters/pnpm/: add.toml  install.toml
filters/prisma/: generate.toml
scripts/: check-file-sizes.sh
src/: cache_cmd.rs  lib.rs  main.rs  runner.rs  skill.rs
src/config/: cache.rs  mod.rs  types.rs
src/filter/: cleanup.rs  dedup.rs  extract.rs  match_output.rs  mod.rs  replace.rs  skip.rs  tests.rs
src/hook/: mod.rs  types.rs
src/rewrite/: mod.rs
tests/: cli_cache.rs  cli_hook.rs  cli_integration.rs  cli_stdlib_new.rs  config_resolution.rs  engine_gaps.rs  filter_cargo_build.rs  filter_cargo_clippy.rs  filter_cargo_test.rs  filter_git_add.rs  filter_git_commit.rs  filter_git_diff.rs  filter_git_log.rs  filter_git_push.rs  filter_git_status.rs  filter_ls.rs  filter_lua.rs
tests/fixtures/: git_add_fatal.txt  git_commit_failure.txt  git_commit_success.txt  git_diff_failure.txt  git_diff_stat.txt  git_log_success.txt  git_push_failure.txt  git_push_rejected.txt  git_push_success.txt  git_push_up_to_date.txt
tests/fixtures/cargo/: check_failure.txt  check_success.txt  install_failure.txt  install_success.txt
tests/fixtures/docker/: images.txt  ps.txt
tests/fixtures/gh/: issue.txt  issue_failure.txt  pr.txt
tests/fixtures/git/: show_failure.txt  show_success.txt
(+21 files in other folders)
